<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="text_app_background">App Background</string>
    <string name="text_accept">Accept</string>
    <string name="text_decline">Decline</string>
    <string name="text_missed_call">Missed call</string>
    <string name="text_call_back">Call back</string>
    <string name="text_app_logo">App Logo</string>
    <string name="text_avatar">Avatar</string>
    <string name="text_incoming_call">Incoming call…</string>
    <string name="text_caller">Caller</string>
    <string name="text_channel_name">Channel Name</string>
    <string name="text_channel_number">Channel Number</string>
</resources>