<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_color"
        android:scaleType="centerCrop"
        android:contentDescription="@string/text_app_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvChannelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="visible"
                tools:text="@string/text_channel_name" />

            <TextView
                android:id="@+id/tvChannelNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:visibility="visible"
                tools:text="@string/text_channel_number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivAvatar"
                    android:layout_width="@dimen/size_avatar"
                    android:layout_height="@dimen/size_avatar"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_placeholder"
                    android:contentDescription="@string/text_avatar"
                    android:scaleType="centerCrop"
                    android:background="@drawable/shape"
                    android:clipToOutline="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/base_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:visibility="visible"
                    tools:text="@string/text_caller"
                    android:ellipsize="end"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/text_app_logo"
                        android:scaleType="fitXY"
                        android:src="@mipmap/ic_logo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:text="@string/text_incoming_call"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <ImageView
                    android:id="@+id/ivDeclineCall"
                    android:layout_width="@dimen/size_button_accept_reject_fullscreen"
                    android:layout_height="@dimen/size_button_accept_reject_fullscreen"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/text_decline"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_decline" />

                <TextView
                    android:id="@+id/tvDecline"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/base_margin"
                    android:layout_marginBottom="@dimen/base_margin"
                    android:gravity="center"
                    android:text="@string/text_decline"
                    android:textColor="@color/action_text"
                    android:textSize="@dimen/size_text_action" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivAcceptCall"
                    android:layout_width="@dimen/size_button_accept_reject_fullscreen"
                    android:layout_height="@dimen/size_button_accept_reject_fullscreen"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/text_accept"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_accept"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvAccept"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/base_margin"
                    android:layout_marginBottom="@dimen/base_margin"
                    android:gravity="center"
                    android:text="@string/text_accept"
                    android:textColor="@color/action_text"
                    android:textSize="@dimen/size_text_action" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>